fix: css image width on small screens

--- a/styles/courses.css
+++ b/styles/courses.css
@@ -86,6 +86,7 @@ details[open] summary {
 .image {
     border: 2px solid black;
     width: 40rem;
+    max-width: 100%;
 }
 
 @media (max-width: 767px) {
